--- a/index.html
+++ b/index.html
@@ -23,33 +23,33 @@
                 <p>Choosing your first discs can be overwhelming. These easy guides will help you put together your first bag to fit your unique play style</p>
             </div>
             <div class="right-intro">
-                <img src="">
+                <img src="./images/basket.jpeg">
             </div>
         </div>
 
         <div class="content">
             <h1>Guides</h1>
             <div class="info">
-                <img src="">
-                <div class="description">describe</div>
+                <img src="./images/disc.jpg">
+                <div class="description">Choosing the right discs for you</div>
             </div>
             <div class="info">
-                <img src="">
-                <div class="description">describe</div>
+                <img src="./images/drive.jpg">
+                <div class="description">Improve your throwing form</div>
             </div>
             <div class="info">
-                <img src="">
-                <div class="description">describe</div>
+                <img src="./images/flightpath.jpeg">
+                <div class="description">Indepth disc information and reviews</div>
             </div>
             <div class="info">
-                <img src="">
-                <div class="description">describe</div>
+                <img src="./images/course.jpeg">
+                <div class="description">Finding courses and groups near you</div>
             </div>
         </div>
 
         <div class="testimonial">
             <div class="quote">
-                <h5>These guides literally saved my life. Last year I was held at gunpoint and forced to put a disc golf bag together. Using all the information from the guide, I was able to put together a fantasic bag and my life was spared. Thanks, Disc Golf Guides!</h5>
+                <h5>"These guides literally saved my life. Last year I was held at gunpoint and forced to put a disc golf bag together. Using all the information from the guide, I was able to put together a fantasic bag and my life was spared. Thanks, Disc Golf Guides!"</h5>
             </div>
             <div class="name">
                 <p>-Disc Golfington</p>
